Merge jdk17 master 20240520 (#9330)
* [PDI-20056] - Implementaion of PDI-20038 in 10.1 reintroduces bug described in PDI-19712

* [PDI-17329] Add Constants : Adding an Internet Address type constant will result in an error.

* [PDI-17350] Row denormaliser : Specifying Internet Address as the data type causes an error. (#9211)

* [PDI-17350] Row denormaliser : Specifying Internet Address as the data type causes an error.

* [CLEANUP] Fix orthographic errors

* [PDI-18308] - new connection type for Amazon Athena

* [BACKLOG-40064] - VFS Connections -  Non-admin users would only see the connections list when on the Open/Save dialogs

* [CLEANUP] Rest plugin not to be released separately; version should (#9227)

track to project.

* [BACKLOG-40283] Script updates to allow karaf to start under JDK17 (#9233)

* [BACKLOG-40283] Cleanup and simplify scripts; don't need to check for
JDK 8 anymore.

* [PDI-19780]- purge-utility is giving an error "Unable to find plugin with ID 'kettle'"

* [BACKLOG-39844] - Have initialize not wipe earlier additions

See analysis https://hv-eng.atlassian.net/wiki/spaces/ENG/pages/31096799399/Design+for+variables+and+projects

* [BACKLOG-40288] Revert Back - Pentaho PDI Observability development changes

* [PDI-19386] FTP_Delete step: Not recognizing "Copy previous results to" option when enabled.

* [BACKLOG-40140] added env variable to identify spoon execution as designer

* [PDI-20059] REST plugin - initialize entity to empty string instead of null (#9237)

* [BACKLOG-39844] - Unit tests for new Variables behavior

* [BACKLOG-40034] Provide an ability to configure different modes available as part of AES encryption

* [BACKLOG-39559] JDK17 - Build issue for https://github.com/pentaho/pentaho-cassandra-plugin.git

* [BACKLOG-40123] Adding two new extension points and updating TransMeta
and JobMeta to call the new extension points.
- Changed the access of the AbstractMeta.loadSharedObjects() method